src/objects/Candidate_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_CTC__c</fullName>
        <label>Current CTC</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expected_CTC__c</fullName>
        <label>Expected CTC</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <label>Notice Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Type__c</fullName>
        <label>Previous Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relevant_Experience__c</fullName>
        <label>Relevant Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>linkedin.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>naukri.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPrimed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Experience__c</fullName>
        <label>Total Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Candidate Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Certifications__c</columns>
        <columns>Total_Experience__c</columns>
        <columns>Relevant_Experience__c</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Employer__c</columns>
        <columns>Current_CTC__c</columns>
        <columns>Expected_CTC__c</columns>
        <columns>Notice_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>